Fix double scroll bar in admin content
We were using `overflow: scroll` as a workaround with a problem we had
with the equalizer. But now we never need an extra vertical scroll bar,
and we only need an extra horizontal scroll bar on small screens.

Since the dashboard was using the class `admin-content` as well, we need
to apply to the dashboard the same changes we've done in the admin
section. I've extracted them into a mixin.

--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -292,21 +292,10 @@ $sidebar-active: #f4fcd0;
   }
 
   .side-menu-and-admin-content {
-    display: flex;
-  }
-
-  .side-menu {
-    flex: 25%;
-    min-width: 250px;
-
-    .admin-sidebar {
-      height: 100%;
-    }
+    @include side-menu-and-content;
   }
 
   .admin-content {
-    flex: 75%;
-
     .proposal-form {
       padding-top: 0;
     }
@@ -323,11 +312,6 @@ $sidebar-active: #f4fcd0;
 
 .for-print-only {
   display: none;
-}
-
-.admin-content {
-  overflow: scroll;
-  padding: $line-height !important;
 }
 
 @include breakpoint(medium) {
